--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>org</module>
+        <module>gateway</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
