--- a/gateway/src/main/webapp/WEB-INF/web.xml
+++ b/gateway/src/main/webapp/WEB-INF/web.xml
@@ -3,53 +3,66 @@
          xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-  <!--加载顺序 context-param -> listener -> filter -> servlet-->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+    <!--加载顺序 context-param -> listener -> filter -> servlet-->
 
-  <!-- 同时加载多个spring配置文件可用  -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>
-      classpath:spring/application*.xml
-    </param-value>
-  </context-param>
+    <!-- 同时加载多个spring配置文件可用  -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath:spring/application*.xml
+        </param-value>
+    </context-param>
 
-  <!-- spring全局监听 -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+    <!-- spring全局监听 -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
-  <!-- shiro 过滤器 start -->
-  <!--<filter>-->
+    <!-- shiro 过滤器 start -->
+    <!--<filter>-->
     <!--<filter-name>shiroFilter</filter-name>-->
     <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
     <!--&lt;!&ndash; 设置true由servlet容器控制filter的生命周期 &ndash;&gt;-->
     <!--<init-param>-->
-      <!--<param-name>targetFilterLifecycle</param-name>-->
-      <!--<param-value>true</param-value>-->
+    <!--<param-name>targetFilterLifecycle</param-name>-->
+    <!--<param-value>true</param-value>-->
     <!--</init-param>-->
-  <!--</filter>-->
-  <!--<filter-mapping>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
     <!--<filter-name>shiroFilter</filter-name>-->
     <!--<url-pattern>/*</url-pattern>-->
-  <!--</filter-mapping>-->
-  <!-- shiro 过滤器 end -->
+    <!--</filter-mapping>-->
+    <!-- shiro 过滤器 end -->
+    <filter>
+        <filter-name>characterEncoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-  <servlet>
-    <servlet-name>mvc-dispatcher</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring/spring-mvc.xml</param-value>
-    </init-param>
-    <!-- servlet加载优先级 -->
-    <load-on-startup>1</load-on-startup>
-  </servlet>
 
-  <servlet-mapping>
-    <servlet-name>mvc-dispatcher</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-mvc.xml</param-value>
+        </init-param>
+        <!-- servlet加载优先级 -->
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
