--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -12,6 +12,15 @@
     <groupId>cn.gezhi.crm</groupId>
     <artifactId>customer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.gezhi.crm</groupId>
+            <artifactId>org</artifactId>
+            <version>${crm.version}</version>
+        </dependency>
+    </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
@@ -41,4 +50,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
